crates/monitrs-tui/tests/snapshots/overlay_snapshots__a_pressure_escalation_is_announced_in_the_notice_panel_ascii.snap
---
source: crates/monitrs-tui/tests/overlay_snapshots.rs
expression: text
---
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|       + NOTICES ---------------------------------------------------------------- 1 critical ---+       |
|       |X pressure CPU is now critical (held 1s): cpu busy at or above diagnostics.cpu_watch_...|       |
|       |Esc dismiss                                                                             |       |
|       +----------------------------------------------------------------------------------------+       |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
