crates/monitrs-tui/tests/snapshots/overlay_snapshots__command_palette_narrowed_by_what_was_typed.snap
---
source: crates/monitrs-tui/tests/overlay_snapshots.rs
expression: text_of(&buffer)
---
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|+ COMMAND ------------------------------------------------------------------------------ 1 commands ---+|
||: export snapshot /tmp/monitrs.json                                                                   ||
||------------------------------------------------------------------------------------------------------||
||> export snapshot <path>  write a redacted JSON snapshot                                              ||
|+------------------------------------------------------------------------------------------------------+|
