crates/monitrs-tui/tests/snapshots/overlay_snapshots__filter_edit_unicode.snap
---
source: crates/monitrs-tui/tests/overlay_snapshots.rs
expression: text_of(&buffer)
---
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|┌ FILTER ──────────────────────────────────────────────────────────────────────────────────────────────┐|
|│/ rustc                                                                                               │|
|│1 of 5 processes match                                                                                │|
|└──────────────────────────────────────────────────────────────────────────────────────────────────────┘|
