crates/monitrs-tui/tests/snapshots/overlay_snapshots__filter_edit_with_no_match.snap
---
source: crates/monitrs-tui/tests/overlay_snapshots.rs
expression: text_of(&buffer)
---
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|+ FILTER ----------------------------------------------------------------------------------------------+|
||/ does-not-exist                                                                                      ||
||no match of 5 processes                                                                               ||
|+------------------------------------------------------------------------------------------------------+|
